--- a/scStore/src/app/features/cart/cart.component.html
+++ b/scStore/src/app/features/cart/cart.component.html
@@ -8,7 +8,7 @@
           <h2>Up to 40% off !</h2>
           <div class="buttons" style="display: flex">
             <a class="read_more" (click)="buyHandler()">Buy</a>
-            <a class="read_more" routerLink="/catalog">Cancel</a>
+            <a class="read_more" routerLink="/catalog">Back</a>
           </div>
 
         </div>
