--- a/scStore/src/app/features/cart/cart.component.html
+++ b/scStore/src/app/features/cart/cart.component.html
@@ -26,7 +26,7 @@
             <tr class="total">
               <td>Total: </td>
               <td>{{price}} BGN</td>
-              <td><button class="clear-btn">clear all</button></td>
+              <td><button class="clear-btn" (click)="cancelAllHandler()">clear all</button></td>
 
             </tr>
           </table>
