--- a/scStore/src/app/core/header/header.component.html
+++ b/scStore/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
           <div class="full">
             <div class="center-desk">
               <div class="logo">
-                <a href="index.html"><img src="./assets/images/logo.png" alt="#" /></a>
+               <img src="./assets/images/logoY.png" alt="#" />
               </div>
             </div>
           </div>
@@ -47,7 +47,7 @@
                   <a class="nav-link" routerLink="/logout" (click)="logoutHandler()"  *ngIf="isLoggedIn">Logout</a>
                 </li>
                 <li class="nav-item d_none">
-                  <a class="nav-link" routerLink="/cart"  *ngIf="isLoggedIn">Cart</a>
+                  <a class="nav-link" routerLink="/cart"  *ngIf="isLoggedIn">Wish list</a>
                 </li>
               </ul>
             </div>
