--- a/scStore/src/app/features/seller-info/seller-info.component.css
+++ b/scStore/src/app/features/seller-info/seller-info.component.css
@@ -16,6 +16,8 @@ table td{
 
 .laptop {
   padding-top: 300px;
+  min-height: 100vh;
+  background: url(/assets/images/contact_g.jpg);
 }
 
 .total {
