--- a/scStore/src/app/home/home/home.component.html
+++ b/scStore/src/app/home/home/home.component.html
@@ -1,23 +1,16 @@
 <section class="banner_main">
   <div id="banner1" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#banner1" data-slide-to="0" class="active"></li>
-      <li data-target="#banner1" data-slide-to="1"></li>
-      <li data-target="#banner1" data-slide-to="2"></li>
-      <li data-target="#banner1" data-slide-to="3"></li>
-      <li data-target="#banner1" data-slide-to="4"></li>
-    </ol>
-    <div class="carousel-inner">
+  <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
             <div class="row">
               <div class="col-md-6">
                 <div class="text-bg">
-                  <span>Computer And Laptop</span>
-                  <h1>Accessories</h1>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
-                  <a routerLink="/catalog">Buy Now </a>
+                  <span>Computers And Laptops</span>
+                  <h1></h1>
+                  <p>Connecting people and devices – buy or sell your laptop or computer here! </p>
+                  <a routerLink="/catalog">Browse products</a>
                 </div>
               </div>
               <div class="col-md-6">
