--- a/scStore/src/app/user/login/login.component.html
+++ b/scStore/src/app/user/login/login.component.html
@@ -1,10 +1,9 @@
 <div class="contact">
-
+  <span><app-error-message /></span>
 <div class="register">
   <form #form="ngForm" (ngSubmit)="submitHandler(form)">
     <div class="header">
       <h3>Login</h3>
-      <app-error-message/>
     </div>
     <div class="fields">
       <div class="field">
