--- a/scStore/src/app/catalog/catalog/catalog.component.html
+++ b/scStore/src/app/catalog/catalog/catalog.component.html
@@ -19,7 +19,7 @@
               <div class="product_box" >
                 <h3>{{device.model}}</h3>
                 <figure><img src="{{device.image}}" alt="#"/></figure>
-                <button type="button" [routerLink]="['/', 'device-details', device._id]">Details</button>>
+                <button type="button" [routerLink]="['/', 'device-details', device._id]">Details</button>
               </div>
             </div>
 
