--- a/scStore/src/app/core/header/header.component.css
+++ b/scStore/src/app/core/header/header.component.css
@@ -1,1 +1,13 @@
+.logo img {
+  max-width: 180px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
 
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+}
