--- a/scStore/src/app/features/cart/cart.component.html
+++ b/scStore/src/app/features/cart/cart.component.html
@@ -9,7 +9,7 @@
           <div class="buttons" style="display: flex">
             <a class="read_more" (click)="buyHandler()">Buy</a>
             <a class="read_more" routerLink="/catalog">Back</a>
-            <a class="read_more" (click)="infoHandler()">Info</a>
+            <a class="read_more" (click)="infoHandler()">Seller info</a>
           </div>
 
         </div>
@@ -32,7 +32,7 @@
           </table>
         </div>
         <div class="laptop_box" *ngIf="!hasDevices">
-          <p>There are no devices in your cart yet</p>
+          <p>There are no devices in your wish list yet</p>
         </div>
       </div>
     </div>
