--- a/scStore/src/app/user/profile/profile.component.css
+++ b/scStore/src/app/user/profile/profile.component.css
@@ -1,8 +1,16 @@
 .three_box1 {
-  background-color: whitesmoke;
-  padding-top: 90px;
+  background: url(/assets/images/contact_g.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+
+
+  padding: 143px 0 90px 0;
+
+
   display: block;
   justify-content: center;
+  width: 100%;
 
 }
 .three_box1 h3 {
@@ -16,7 +24,7 @@ text-align: center;
   border: #48ca95 solid 1px;
   border-radius: 15px;
   margin-bottom: 90px;
-  width:300% ;
+  width:100% ;
   margin-top: 100px;
 
 
@@ -41,6 +49,9 @@ text-align: center;
   margin-bottom: 40px;
   display: block;
 }
+span {
+  color:  #48ca95;
+}
 
 .edit-btn {
   font-size: 22px;
@@ -48,13 +59,13 @@ text-align: center;
   background-color: #48ca95;
 
   color: #fff;
-  padding: 15px 0px;
+  padding: 10px 0px;
   max-width:150px;
   width: 100%;
   display: block;
-  margin-top: 30px !important;
-  margin: 0 auto;
-  border-radius: 40px;
+
+  margin: 50px auto;
+  border-radius: 30px;
   font-weight: 500;
 }
 
@@ -78,6 +89,21 @@ text-align: center;
 }
 .header h3 {
   font-size: 2em;
+}
+.register{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding-top: 100px;
+
+}
+.header {
+  background-color: transparent;
+}
+.header h3 {
+  font-size: 2em;
+  color: whitesmoke;
 }
 .register{
   display: flex;
@@ -114,6 +140,7 @@ text-align: center;
   margin-bottom: 0;
 
 }
+
 .register form .fields{
   display: flex;
   flex-direction: column;
@@ -132,19 +159,43 @@ text-align: center;
   font-size: 16px;
   font-weight: bolder;
 }
+.register form .fields .field input::placeholder {
+  text-align: center;
+}
+
 .register form .fields .field input{
-  background-color: transparent;
+  text-align: center;
+  background-color:  transparent;
   color: whitesmoke;
   min-width: 15em;
   min-height: 2em;
-  border-bottom: 4px solid whitesmoke;
+  border: none;
+  border-bottom: 1px solid whitesmoke;
+  /* Цветът на текста */
+  transition: background-color 0.3s ease, color 0.3s ease;
 
 }
+
+.register form .fields .field input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+  background-color: transparent !important; /* Прозрачен фон */
+  -webkit-text-fill-color: whitesmoke !important; /* Цветът на текста */
+  border-bottom: 1px solid whitesmoke !important; /* Запазване на рамката */
+  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+  transition: background-color 5000s ease-in-out 0s;/* Премахване на autofill фон */
+  box-shadow: 0 0 0 1000px transparent inset !important; /* Съвместимост */
+}
+
+
+
 .button {
   text-align: center;
   display: flex;
   flex-direction: row;
-  gap: 2em;
+  gap: 15px;
+
 }
 .button input {
   border-radius: 30px;
@@ -158,7 +209,7 @@ text-align: center;
   font-size: 1.5em;
 }
 .register form .fields .button input:hover{
-  background-color: #21b443;
+  background-color:#34ce57;
   color: white;
   border-color: white;
   cursor: pointer;
@@ -185,6 +236,10 @@ h5 a {
   left: 0em;
   color: red;
 }
+.contact {
+  padding-bottom: 302px;
+}
+
 
 
 
