--- a/scStore/src/app/user/user-offers/user-offers.component.css
+++ b/scStore/src/app/user/user-offers/user-offers.component.css
@@ -7,9 +7,18 @@ button {
   font-weight: 500;
   margin: 0 auto;
   padding: 10px 0;
-  margin-top: 40px;
+  margin-top: 10px;
   transition: ease-in all 0.5s;
 }
+
+h2 {
+  color: whitesmoke;
+}
+
+button {
+  background-color: #4f4aa6;
+}
+
 
 button:hover {
   background: #48ca95;
@@ -23,5 +32,18 @@ button:hover {
   color: red;
 
 }
+
+img {
+  max-width: 300px;
+  height: 300px;
+  object-fit: contain;
+  overflow: hidden;
+  border: 1px solid #48ca95;
+  border-radius: 5px;
+}
+
+
+
+
 
 
