add about static page and some css

--- a/scStore/src/app/core/about-me/about-me.component.html
+++ b/scStore/src/app/core/about-me/about-me.component.html
@@ -1,1 +1,25 @@
-<p>about-me works!</p>
+<div class="laptop">
+  <div class="container">
+    <div class="row">
+    <div class="col-md-6">
+    <h1>Welcome to ScStore</h1>
+      <p>I’m glad you’ve visited this page!</p>
+      <h1>Why Computers?</h1>
+      <p>From a young age, I’ve been fascinated by the magic of technology. This interest gradually turned into my profession – today, I work as a computer service technician. Helping people solve their technical issues and making their lives easier through technology is a true privilege.</p>
+    </div>
+    <div class="col-md-6">
+      <h1>About the Application</h1>
+      <p>
+        This application was created as part of my Angular course, serving as a learning project. It represents my step forward into the world of web development and showcases the skills and effort I’ve invested during my studies.
+      </p>
+      <h1>A Bit About Me</h1>
+    <p>
+      My name is Miglena Todorova. Besides my professional interest in computers and technology, I have a true passion for programming. For me, it’s not just a way to solve problems but also an art form that allows me to create something new and useful.
+    </p>
+      <p>
+        Thank you for taking the time to learn more about me and my application!
+      </p>
+    </div>
+    </div>
+  </div>
+</div>
