--- a/scStore/src/app/core/header/header.component.html
+++ b/scStore/src/app/core/header/header.component.html
@@ -26,13 +26,10 @@
                   <a class="nav-link" routerLink="/home">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" routerLink="/about-me">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/catalog">Catalog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contacts</a>
                 </li>
                 <li class="nav-item d_none">
                   <a class="nav-link" routerLink="search"><i class="fa fa-search" aria-hidden="true"></i></a>
